# Fitness-body-sensor-game

./: LICENSE  README.md  pose_image.py  pose_realtime.py  pyproject.toml  requirements.txt  setup.py  test.py
src/: pose_image.py  pose_realtime.py
