[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fitness-body-sensor-game"
version = "1.0.0"
description = "A fitness body sensor game using MediaPipe"
authors = [{name = "Lxin", email = ""}, {name = "EDGTheXu", email = "448537509@qq.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0.74",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/ikunkuner/Fitness-body-sensor-game"
"Bug Tracker" = "https://github.com/ikunkuner/Fitness-body-sensor-game/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"src" = "src"

# 环境设置脚本
[tool.setuptools.scripts]
setup-env = "scripts.setup:main"